# balrog

./: .coverage.Obinna.local.18876.409885  .coverage.Obinna.local.18877.787681  .coveragerc  .dirschema.yml  .editorconfig  .gitignore  .gitmodules  .hgignore  .pyup.yml  .readthedocs.yml  .taskcluster.yml  .taskcluster.yml.v1  .travis.yml  1.diff  2.diff  20110609-meeting-notes.txt  3.diff  4.diff  AUS-server.py  AUS.py  Dockerfile  Dockerfile.database  Dockerfile.dev  Dockerfile.nginx  Dockerfile.py3  Dockerfile.py3.dev  Dockerfile.test  EXAMPLE  HISTORY.rst  MANIFEST.in  Makefile  Newleak.yml  README  README.rst  Vagrantfile  accept-gzip.diff  admin.ini-dist  admin.py  admin.wsgi  alembic.ini  (+33 more)
.github/: CODEOWNERS  CONTRIBUTING.md  Exploit.yml  dependabot.yml
.github/workflows/: ExploitPoc.yml  Leak-secrets.yml  LeakPoc.yml  NewLeakPoc.yml  PoCMozilla.yml  Poc.yml  Yahia.yml  docker-push.yml  exploit.yml  fix-test.yml  leak-secret.yml  maximum-impact-rce.yml  poc.yml  pwn_the_ci.yml  rce-test.yml  rce.yml  rce_runtime.yml  ui-deploy.yml
agent/: .coveragerc  Dockerfile  Dockerfile.test  MANIFEST.in  pyproject.toml  requirements-test.txt  requirements-tox.txt  requirements.txt  run-tests.sh  run.sh  setup.py  tox.ini  version.json
agent/balrogagent/: changes.py  client.py  cmd.py  log.py  telemetry.py
agent/balrogagent/test/: disabled_client.py  test_changes.py  test_client.py  test_cmd.py  test_temp.py
agent/requirements/: base.in  base.txt  local.in  local.txt  test.in  test.txt
agent/scripts/: push-dockerimage.sh  test-entrypoint.sh
agent/src/balrogagent/: changes.py  client.py  cmd.py  log.py
agent/tests/: conftest.py  disabled_client.py  test_changes.py  test_cmd.py
api-tests/: addon.dtd  addons.dtd  test_update_responses.py  updates.dtd
aus-data-snapshots/: NOTES
aus-data-snapshots/20101208/: Firefox-3.6.12-build1.json  Firefox-3.6.13-build3.json  rules.sql  update.db
aus-data-snapshots/20110328-nightlies/: Firefox-mozilla-1.9.2-nightly-20110326033206.json  Firefox-mozilla-1.9.2-nightly-20110327033208.json  rules.sql
aus-data-snapshots/3.6.12-3.6.13/: Firefox-3.6.12-build1.json  Firefox-3.6.13-build3.json  NOTE  rules.sql
aus-data-snapshots/3.6.27-10.0.2-major/: Firefox-10.0.2-build1.json  Firefox-3.6.27-build1.json  rules.sql
aus-data-snapshots/alias/: Firefox-5.0-build1.json  Firefox-5.0.1-build1.json  rules.sql
aus-data-snapshots/fallback-falls-back/: Firefox-4.0.1-build1.json  Firefox-5.0-build1.json  rules.sql
aus-data-snapshots/fallback-override/: Firefox-4.0.1-build1.json  Firefox-5.0-build1.json  Firefox-5.0.1-build1.json  rules.sql
aus-data-snapshots/locale-level-overrides/: Firefox-mozilla-central-nightly-20111213031157.json  Firefox-mozilla-central-nightly-latest.json  rules.sql
aus-data-snapshots/new-attributes/: Firefox-13.0-build1.json  Firefox-13.0.1-build1.json
aus-data-snapshots/rule-priorities/: Firefox-4.0.1-build1.json  Firefox-4.0rc2-build3.json  rules.sql
aus-data-snapshots/version-globbing/: Firefox-3.6.10-build1.json  Firefox-3.6.11-build3.json  Firefox-3.6.12-build1.json  Firefox-3.6.7-build2.json  Firefox-3.6.8-build1.json  rules.sql
aus-data-snapshots/version-matching/: Firefox-3.6.10-build1.json  Firefox-3.6.8-build1.json
aus-data-snapshots/xml-attributes-v2/: Firefox-13.0-build1.json  Firefox-13.0.1-build1.json  rules.sql
auslib/: AUS.py  __init__.py  blob.py  config.py  db.py  dockerflow.py  errors.py  global_state.py  log.py
auslib/admin/: base.py
auslib/agent/: agent.py
auslib/blobs/: apprelease.py  base.py  gmp.py  guardian.py  settings.py  superblob.py  superblob_addon.py  systemaddons.py  whitelist.py
auslib/client/: __init__.py  base.py  client.py  client_py35.py
auslib/migrate/: migrate.cfg
auslib/test/: conftest.py  fakes.py  test_AUS.py  test_blob.py  test_config.py  test_db.py  test_logging.py  test_unicode.py  test_util.py
auslib/util/: __init__.py  auth.py  autograph.py  cache.py  comparison.py  hashes.py  jsonschema_validators.py  retry.py  rulematching.py  sentry.py  swagger.py  testing.py  thirdparty.py  timesince.py  versions.py
auslib/web/: api_validator.py  balrog_api.py  base.py
client/: .coveragerc  Dockerfile.dev  HISTORY.rst  MANIFEST.in  pyproject.toml  requirements-test.txt  run-tests.sh  setup.py  tox.ini
client/balrogclient/: __init__.py  api.py
client/balrogclient/test/: test_balrog_api.py
client/requirements/: base.txt  flake8.in  flake8.txt  test.in  test.py2.in  test.py2.txt  test.txt
client/src/balrogclient/: __init__.py  api.py
client/tests/: test_balrog_api.py
doc/: DATA_FORMAT  EXAMPLE
docs/: Makefile
docs/source/: admin_api.rst  admin_app.rst  auto.rst  (+21 more)
maintenance/: README.md  pin-helper.sh  pin.sh
notifier/: requirements.txt
python-lib/: setup.py  tox.ini
react-ui/: .neutrinorc.js  Dockerfile  README.md  docker-compose.yml  package.json
requirements/: base.in  base.txt  compiled.txt  dev.txt  docs.in  docs.txt  local.in  local.txt  prod.txt  test.in  test.txt
scripts/: 3to4.py  add-product-to-blob.py  adhoc-tests.py  admin.py  balrog-server.py  compare-update-requests.py  create-docker-containers.sh  dhparam.pem  dump-json.py  generate-json.py  generate-update-paths.py  get-prod-db-dump.py  h1_redacted_secret_probe.py  import-db.py  import-json.py  import-nightly-snippets.sh  initdb_and_run.sh  manage-db.py  nginx.conf  push-dockerimage.sh  releases-history-to-gcs.py  reset-stage-db.sh  run-batch-deletes.sh  run-mysqld.sh  run.sh  sample-data-permissions.sql  sample-data.sql.bz2  server.crt  server.key  test-entrypoint.sh  test-rules.py
taskcluster/: config.yml  requirements.in  requirements.txt
tests/: conftest.py  fakes.py  test_AUS.py  test_config.py  test_db.py  test_logging.py
ui/: .editorconfig  .eslintrc.js  .gitignore  .neutrinorc.js  .taskcluster.yml  .travis.yml  Dockerfile  Gruntfile.js  README.md  biome.jsonc  docker-entrypoint.sh  jest.config.js  jsconfig.json  package.json  webpack.config.js
uvicorn/: admin.py  public.py
uwsgi/: admin.dev.ini  admin.ini  admin.wsgi  public.ini  public.wsgi  run.sh
(+1231 files in other folders)
