[project]
name = "balrogagent"
version = "0.1.0"
description = "Balrog Agent"
license = "MPL-2.0"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" },
]
dependencies = [
    "aiohttp",
    "sentry-sdk",
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "tox",
    "tox-uv",
    "yarl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/balrogagent"]

[project.scripts]
balrogagent = "balrogagent.cmd:main"

[tool.black]
line-length = 160
target-version = ["py38"]
include = '\.(wsgi|pyi?)$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.cache
  | \.cache_py3
  | _build
  | buck-out
  | build
  | dist
  | ui
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 160
