[project]
name = "balrogclient"
version = "2.0"
description = "Balrog admin API client"
license = "MPL-2.0"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
dependencies = [
    "requests",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "coverage",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "requests_mock",
    "ruff",
    "tox",
    "tox-uv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/balrogclient"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 160
